--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <br />
       <div
         class="g-recaptcha"
-        data-callba="captchaSuccess"
+        data-callback="captchaSuccess"
         data-sitekey="6LfC8j8pAAAAAB2mCg5WX6Al0qESNW91iDwc153k"
       ></div>
       <br />
